--- a/react-ecommerce/src/App.css
+++ b/react-ecommerce/src/App.css
@@ -9,3 +9,25 @@
 .bg-brand-container{
   min-height: 100vh;
 }
+
+.products-container{
+  padding: 1rem;
+}
+
+.cart-deck{
+  background-color: white;
+  border: 2px solid #f2f2f2;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px #f2f2f2;
+}
+
+.cart-img-top{
+  width: 250px;
+  margin: 1rem 0;
+  padding: 10px 0;
+}
+
+.cart-img-top:hover{
+  filter: brightness(0.7);
+  transform: scale(1.1);
+}
